--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,15 +3,30 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a routerLink="product/create" class="nav-link" routerLinkActive="active">
-          Create Product
+        <a routerLink="utilisateur/create" class="nav-link" routerLinkActive="active">
+          Create Utilisateur
         </a>
       </li>
       <li class="nav-item">
-        <a routerLink="products" class="nav-link" routerLinkActive="active">
-          Products
+        <a routerLink="utilisateurs" class="nav-link" routerLinkActive="active">
+          Utilisateurs
         </a>
-      </li> 
+      </li>  
+      <li class="nav-item">
+        <a routerLink="Devlopper/login" class="nav-link" routerLinkActive="active">
+          Devloppeur
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="Aliments/add" class="nav-link" routerLinkActive="active">
+           Ajouter Aliments
+        </a>
+      </li>
+      <li class="nav-item">
+        <a routerLink="Aliments/edit" class="nav-link" routerLinkActive="active">
+           Modifier Aliments
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
